# ground_pointcloud_editor

./: README.md
ground_pointcloud_editor/: CMakeLists.txt  package.xml
ground_pointcloud_editor/config/: my_rviz.rviz
ground_pointcloud_editor/data/: allring.pcd  ground.pcd
ground_pointcloud_editor/launch/: test.launch
ground_pointcloud_editor/src/: ground_pointcloud_editor_node.cpp
rviz_tool/selected_clusters/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_tool/selected_clusters/include/selected_clusters/: SelectedClusters.h
rviz_tool/selected_clusters/src/: SelectedClusters.cpp
rviz_tool/selected_points/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_tool/selected_points/include/selected_points/: SelectedPoints.h
rviz_tool/selected_points/src/: SelectedPoints.cpp
