<package>
  <name>selected_clusters</name>
  <version>1.0.0</version>
  <description>
     RVIZ plugin to select points and publish them in a new topic.
     It finds the real set of selected points using pcl and a bounding box and publish them in another topic.
  </description>
  <maintainer email="yan_1whun1@hotmail.com">Apola</maintainer>
  <license>MIT</license>

  <author>Apola</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
